# HIDTester

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MIGRATION.md  README.md  SECURITY.md
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
build-precheck/: version.h
src/: HatUtils.h  JoystickHandler.h  main.cpp
tests/: CMakeLists.txt  deadzone_test.cpp  test_main.cpp
